correção de cores do tema

--- a/themes/CampoMourao/assets-src/sass/theme-BaseV2.scss
+++ b/themes/CampoMourao/assets-src/sass/theme-BaseV2.scss
@@ -70,7 +70,7 @@ $home-register: #0d5830;
 .main-header {
     &__content {
         .logIn {
-            background: #0d5830;
+            background: #528D63;
         }
     }
 }
